<resources>
    <string name="app_name">FomApp</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_id">" "User Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">" "Password</string>
    <string name="hint_password_repeat">Password Repeat</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="action_settings">Settings</string>
</resources>
