<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginMainGround"
    >
    <VideoView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"

        android:weightSum="1">

        <ImageView
            android:layout_width="230dp"
            android:layout_height="90dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo1" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            >
            <EditText
                android:id="@+id/input_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:hint="@string/hint_id"
                android:drawableLeft="@drawable/user"
                android:layout_weight="0.13" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_login_password"
                android:layout_width="match_parent"
                android:layout_height="48.0dip"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:hint="@string/hint_password"
                android:drawableLeft="@drawable/pass" />
        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/btn_signin"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:text="@string/btn_sign_in"
            android:background="@drawable/buton"
            android:layout_marginTop="15dp"
            android:textColor="@color/singinButtonTextColorInput"
            android:layout_weight="0.01" />

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            </android.support.design.widget.TextInputLayout>
        <Button
            android:layout_width="274dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:background="@drawable/register"
            android:layout_marginTop="5dp"
            />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>